--- a/index.html
+++ b/index.html
@@ -1,59 +1,203 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Loopstudios landing page</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="css/style.css">
+  <title>Loopstudios landing page</title>
+
 </head>
+
 <body>
-  About
-  Careers
-  Events
-  Products
-  Support
+  <header class="header">
+    <nav class="nav-menu container">
+      <div class="logo">
+        <img src="images/logo.svg" alt="Logo loopstudios">
+      </div>
 
-  Immersive experiences that deliver
+      <ul class="nav-list">
+        <li class="nav-item"><a href="#">About</a></li>
+        <li class="nav-item"><a href="#">Careers</a></li>
+        <li class="nav-item"><a href="#">Events</a></li>
+        <li class="nav-item"><a href="#">Products</a></li>
+        <li class="nav-item"><a href="#">Support</a></li>
+      </ul>
 
-  The leader in interactive VR
+      <button class="btn-menu">
+        <img src="images/icon-hamburger.svg" alt="menu icon-hamburger">
+      </button>
 
-  Founded in 2011, Loopstudios has been producing world-class virtual reality 
-  projects for some of the best companies around the globe. Our award-winning 
-  creations have transformed businesses through digital experiences that bind 
-  to their brand.
+    </nav>
+  </header>
 
-  Our creations
+  <section class="bg-hero">
+    <div class="container">
+      <h1 class="title">
+        Immersive experiences that deliver
+      </h1>
+    </div>
+  </section>
 
-  See all
+  <main class="container">
+    <section class="interactive">
+      <div class="image-interactive">
+        <picture>
+          <source media="(min-width: 768px)" srcset="images/desktop/image-interactive.jpg">
+          <img src="images/mobile/image-interactive.jpg" alt="interactive VR">
+        </picture>
+      </div>
 
-  Deep earth
-  Night arcade
-  Soccer team VR
-  The grid
-  From up above VR
-  Pocket borealis
-  The curiosity
-  Make it fisheye
+      <div class="interactive-content">
+        <h2 class="title-interactive">
+          The leader in interactive VR
+        </h2>
+        <p class="description-interactive">
+          Founded in 2011, Loopstudios has been producing world-class virtual reality
+          projects for some of the best companies around the globe. Our award-winning
+          creations have transformed businesses through digital experiences that bind
+          to their brand.
+        </p>
+      </div>
+    </section>
 
-  About
-  Careers
-  Events
-  Products
-  Support
+    <section class="creations">
+      <div class="creation-top">
+        <h2 class="title-creations">
+          Our creations
+        </h2>
+      </div>
 
-  © 2021 Loopstudios. All rights reserved.
+      <div class="grid-creations">
+        <div class="creations-items">
+          <picture>
+            <source media="(min-width: 768px)" srcset="images/desktop/image-deep-earth.jpg">
+            <img src="images/mobile/image-deep-earth.jpg" alt="deep earth">
+          </picture>
+          <a class="creation-link" href="#">
+            <h3>Deep earth</h3>
+          </a>
+        </div>
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+        <div class="creations-items">
+          <picture>
+            <source media="(min-width: 768px)" srcset="images/desktop/image-night-arcade.jpg">
+            <img src="images/mobile/image-night-arcade.jpg" alt="deep earth">
+          </picture>
+          <a class="creation-link" href="#">
+            <h3>Night arcade</h3>
+          </a>
+        </div>
+
+        <div class="creations-items">
+          <picture>
+            <source media="(min-width: 768px)" srcset="images/desktop/image-soccer-team.jpg">
+            <img src="images/mobile/image-soccer-team.jpg" alt="deep earth">
+          </picture>
+          <a class="creation-link" href="#">
+            <h3>Soccer team VR</h3>
+          </a>
+        </div>
+
+        <div class="creations-items">
+          <picture>
+            <source media="(min-width: 768px)" srcset="images/desktop/image-grid.jpg">
+            <img src="images/mobile/image-grid.jpg" alt="deep earth">
+          </picture>
+          <a class="creation-link" href="#">
+            <h3>The grid</h3>
+          </a>
+        </div>
+
+        <div class="creations-items">
+          <picture>
+            <source media="(min-width: 768px)" srcset="images/desktop/image-from-above.jpg">
+            <img src="images/mobile/image-from-above.jpg" alt="deep earth">
+          </picture>
+          <a class="creation-link" href="#">
+            <h3>From up above VR</h3>
+          </a>
+        </div>
+        
+        <div class="creations-items">
+          <picture>
+            <source media="(min-width: 768px)" srcset="images/desktop/image-pocket-borealis.jpg">
+            <img src="images/mobile/image-pocket-borealis.jpg" alt="deep earth">
+          </picture>
+          <a class="creation-link" href="#">
+            <h3>Pocket borealis</h3>
+          </a>
+        </div>
+
+        <div class="creations-items">
+          <picture>
+            <source media="(min-width: 768px)" srcset="images/desktop/image-curiosity.jpg">
+            <img src="images/mobile/image-curiosity.jpg" alt="deep earth">
+          </picture>
+          <a class="creation-link" href="#">
+            <h3>The curiosity</h3>
+          </a>
+        </div>
+
+        <div class="creations-items">
+          <picture>
+            <source media="(min-width: 768px)" srcset="images/desktop/image-fisheye.jpg">
+            <img src="images/mobile/image-fisheye.jpg" alt="deep earth">
+          </picture>
+          <a class="creation-link" href="#">
+            <h3>Make it fisheye</h3>
+          </a>
+        </div>
+      </div>
+
+      <a href="#" class="btn-creations">See all</a>
+    </section>
+  </main>
+
+  <footer class="footer">
+    <div class="container footer-content">
+      <div class="footer-nav">
+        <img class="logo" src="images/logo.svg" alt="logo loopstudios">
+  
+        <ul class="footer-list">
+          <li class="footer-item"><a href="#">About</a></li>
+          <li class="footer-item"><a href="#">Careers</a></li>
+          <li class="footer-item"><a href="#">Events</a></li>
+          <li class="footer-item"><a href="#">Products</a></li>
+          <li class="footer-item"><a href="#">Support</a></li>
+        </ul>
+      </div>
+  
+      <div class="sociais-media">
+        <ul class="sociais-list">
+          <li class="sociais-item">
+            <a href="#"><img src="images/icon-facebook.svg" alt="facebook"></a>
+          </li>
+  
+          <li class="sociais-item">
+            <a href="#"><img src="images/icon-twitter.svg" alt="twitter"></a>
+          </li>
+  
+          <li class="sociais-item">
+            <a href="#"><img src="images/icon-pinterest.svg" alt="pinterest"></a>
+          </li>
+  
+          <li class="sociais-item">
+            <a href="#"><img src="images/icon-instagram.svg" alt="instagram"></a>
+          </li>
+        </ul>
+  
+        <small class="copy">© 2021 Loopstudios. All rights reserved.</small>
+      </div>
+    </div>
+  </footer>
+
+  
+
+
+  <script src="js/script.js"></script>
 </body>
+
 </html>
