--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
             <source media="(min-width: 768px)" srcset="images/desktop/image-deep-earth.jpg">
             <img src="images/mobile/image-deep-earth.jpg" alt="deep earth">
           </picture>
-          <a class="creation-link" href="#">
+          <div class="creation-cover">
             <h3>Deep earth</h3>
-          </a>
+          </div>
         </div>
 
         <div class="creations-items">
@@ -86,9 +86,9 @@
             <source media="(min-width: 768px)" srcset="images/desktop/image-night-arcade.jpg">
             <img src="images/mobile/image-night-arcade.jpg" alt="deep earth">
           </picture>
-          <a class="creation-link" href="#">
+          <div class="creation-cover">
             <h3>Night arcade</h3>
-          </a>
+          </div>
         </div>
 
         <div class="creations-items">
@@ -96,9 +96,9 @@
             <source media="(min-width: 768px)" srcset="images/desktop/image-soccer-team.jpg">
             <img src="images/mobile/image-soccer-team.jpg" alt="deep earth">
           </picture>
-          <a class="creation-link" href="#">
+          <div class="creation-cover">
             <h3>Soccer team VR</h3>
-          </a>
+          </div>
         </div>
 
         <div class="creations-items">
@@ -106,9 +106,9 @@
             <source media="(min-width: 768px)" srcset="images/desktop/image-grid.jpg">
             <img src="images/mobile/image-grid.jpg" alt="deep earth">
           </picture>
-          <a class="creation-link" href="#">
+          <div class="creation-cover">
             <h3>The grid</h3>
-          </a>
+          </div>
         </div>
 
         <div class="creations-items">
@@ -116,9 +116,9 @@
             <source media="(min-width: 768px)" srcset="images/desktop/image-from-above.jpg">
             <img src="images/mobile/image-from-above.jpg" alt="deep earth">
           </picture>
-          <a class="creation-link" href="#">
+          <div class="creation-cover">
             <h3>From up above VR</h3>
-          </a>
+          </div>
         </div>
         
         <div class="creations-items">
@@ -126,9 +126,9 @@
             <source media="(min-width: 768px)" srcset="images/desktop/image-pocket-borealis.jpg">
             <img src="images/mobile/image-pocket-borealis.jpg" alt="deep earth">
           </picture>
-          <a class="creation-link" href="#">
+          <div class="creation-cover">
             <h3>Pocket borealis</h3>
-          </a>
+          </div>
         </div>
 
         <div class="creations-items">
@@ -136,9 +136,9 @@
             <source media="(min-width: 768px)" srcset="images/desktop/image-curiosity.jpg">
             <img src="images/mobile/image-curiosity.jpg" alt="deep earth">
           </picture>
-          <a class="creation-link" href="#">
+          <div class="creation-cover">
             <h3>The curiosity</h3>
-          </a>
+          </div>
         </div>
 
         <div class="creations-items">
@@ -146,9 +146,9 @@
             <source media="(min-width: 768px)" srcset="images/desktop/image-fisheye.jpg">
             <img src="images/mobile/image-fisheye.jpg" alt="deep earth">
           </picture>
-          <a class="creation-link" href="#">
+          <div class="creation-cover">
             <h3>Make it fisheye</h3>
-          </a>
+          </div>
         </div>
       </div>
 
